# real-estate-llm

./: .dockerignore  .env  Dockerfile  Jenkinsfile  README.md  cli_main.py  docker-compose.yml  mongo_client.py  pyproject.toml  requirements.txt  wait-for-services.sh
.github/workflows/: ci.yml
app/: graph.py  guardrails_output.py  main.py  rag.py  translator.py  utils.py
chroma_index/: chroma.sqlite3
flow/: real_estate_flow.py
frontend_build/: asset-manifest.json  index.html
frontend_build/static/js/: main.5c7970dc.js  main.5c7970dc.js.map
guardrails/: property_schema.rail
nodes/: guardrails_validate.py  insert_property_node.py  properties_fetch_nodes.py
real_estate_langgraph.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
